[package]
name = "shiplog-schema"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Canonical shiplog schema: events, coverage manifests, workstreams, and bundle types."
readme = "README.md"
documentation = "https://docs.rs/shiplog-schema"
repository.workspace = true
homepage.workspace = true
keywords = ["schema", "events", "coverage", "workstreams", "serde"]
categories = ["data-structures", "development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
shiplog-ids = { path = "../shiplog-ids", version = "0.3.0" }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
insta = { workspace = true, features = ["json"] }
shiplog-testkit = { path = "../shiplog-testkit" }
serde_yaml.workspace = true

[[bench]]
name = "serialization"
harness = false

[lints]
workspace = true
