[package]
name = "shiplog-testkit"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Workspace-only fixture builders and BDD helpers for shiplog tests."
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords = ["testing", "fixtures", "bdd", "helpers", "shiplog"]
categories = ["development-tools::testing"]
publish = false

[features]
default = []
merge_pipeline = []
team = ["shiplog-team"]

[dependencies]
chrono.workspace = true
shiplog-ids = { path = "../shiplog-ids", version = "0.3.0" }
shiplog-schema = { path = "../shiplog-schema", version = "0.3.0" }
shiplog-merge = { path = "../shiplog-merge", version = "0.3.0" }
shiplog-team = { path = "../shiplog-team", version = "0.3.0", optional = true }
shiplog-ports = { path = "../shiplog-ports", version = "0.3.0" }
shiplog-render-md = { path = "../shiplog-render-md", version = "0.3.0" }
shiplog-workstreams = { path = "../shiplog-workstreams", version = "0.3.0" }
proptest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[dev-dependencies]
shiplog-redact = { path = "../shiplog-redact", version = "0.3.0" }
shiplog-engine = { path = "../shiplog-engine", version = "0.3.0" }
shiplog-ingest-json = { path = "../shiplog-ingest-json", version = "0.3.0" }
shiplog-render-json = { path = "../shiplog-render-json", version = "0.3.0" }
shiplog-coverage = { path = "../shiplog-coverage", version = "0.3.0" }
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true

[lints]
workspace = true
