[package]
name = "shiplog-testkit"
version = "0.11.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Workspace-only fixture builders and BDD helpers for shiplog tests."
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords = ["testing", "fixtures", "bdd", "helpers", "shiplog"]
categories = ["development-tools::testing"]
publish = false

[features]
default = []
merge_pipeline = []
team = []

[dependencies]
anyhow.workspace = true
chrono.workspace = true
shiplog = { path = "../../apps/shiplog", version = "0.11.0" }
proptest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[dev-dependencies]
serde.workspace = true
serde_yaml.workspace = true

[lints]
workspace = true
