[package]
name = "shiplog-workstreams"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Repo-based clustering and curated/suggested workstream file management for shiplog."
readme = "README.md"
documentation = "https://docs.rs/shiplog-workstreams"
repository.workspace = true
homepage.workspace = true
keywords = ["workstreams", "clustering", "yaml", "curation", "pipeline"]
categories = ["development-tools", "filesystem"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde_yaml.workspace = true
shiplog-ids = { path = "../shiplog-ids", version = "0.3.0" }
shiplog-schema = { path = "../shiplog-schema", version = "0.3.0" }
shiplog-ports = { path = "../shiplog-ports", version = "0.3.0" }

[dev-dependencies]
chrono.workspace = true
tempfile = "3"
proptest.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
insta = { workspace = true, features = ["json"] }
shiplog-testkit = { path = "../shiplog-testkit" }

[lints]
workspace = true
